--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+
+
+<app-body></app-body>
 
 <app-footer></app-footer>
