--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+ 
+  
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for our newsletter</strong>
+              </p>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Email" aria-label="Email">
+                <button class="btn btn-outline-success" type="submit">Subscribe</button>
+              </form>
+            </div>
+            <!--Grid column-->
+
+
+            
+            <footer class="bg-light text-center text-lg-start">
+              <!-- Copyright -->
+              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2022 Copyright:
+                <a class="text-dark" href="">SDA JavaRemoteRO38</a>
+              </div>
+              <!-- Copyright -->
+            </footer>
+
+            
+
+                
+            
