--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<!-- <p>home works!</p> -->
+
+
+<!-- <img src="../images/background.jpg"> -->
+<div>
+    <img src="../assets/images/background.jpg" width="1823" height="1080"> 
+
+ <!-- width="500" height="600" alt="Girl in a jacket" -->
+
+</div>
