--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <!-- Footer -->
+
 <footer class="bg-dark text-center text-white">
  
   
@@ -21,13 +22,11 @@
 
 
             
-            <footer class="bg-light text-center text-lg-start">
+            <footer class="bg-light text-center text-lg-start text-black">
               <!-- Copyright -->
-              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2022 Copyright:
-                <a class="text-dark" href="">SDA JavaRemoteRO38</a>
+              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);"> © 2022 Copyright:
+                        <a class="text-dark" href="">SDA JavaRemoteRO38</a>
               </div>
-              <!-- Copyright -->
             </footer>
 
             
