--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,23 +7,29 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
+            <a class="btn btn-outline-success" aria-current="page" href="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Promotii</a>
+            <a class="btn btn-outline-success" href="#">Promotii</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Categories</a>
+            <a class="btn btn-outline-success" href="#">Categories</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Suport clienti</a>
+            <a class="btn btn-outline-success" href="#">Suport clienti</a>
           </li>
+
+        
+
           <li class="nav-item">
-            <a class="nav-link" href="/login">LOGIN</a>
+           <a class="btn btn-outline-success" href="/login">LOGIN</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="/register">Register</a>
+            <a class="btn btn-outline-success" href="/register">Register</a>
           </li>
+
+  
           <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
