--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,46 +1,32 @@
-<form>
+<form action="" [formGroup]="this.registerForm" (ngSubmit)="onRegister()">
 
-    <div class="mb-3">
-        <label for="exampleInputFirstName" class="form-label">FirstName</label>
-        <input type="firstname" class="form-control" placeholder="ex: Curtis" id="exampleInputFirstName">
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputLastName" class="form-label">LastName</label>
-        <input type="lastname" class="form-control" placeholder="ex: Jackson" id="exampleInputLastName"> 
-      </div>
+  <div class="mb-3">
+    <label for="firstName" class="form-label">FirstName</label>
+    <input formControlName="firstName" class="form-control" id="firstName" type="text">
+  </div>
+  <div class="mb-3">
+    <label for="lastName" class="form-label">LastName</label>
+    <input formControlName="lastName" class="form-control" id="lastName" type="text">
+  </div>
 
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="ex: sdacademy@gmail.com" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
+  <div class="mb-3">
+    <label for="email" class="form-label">Email address</label>
+    <input formControlName="email" class="form-control" id="email" 
+      aria-describedby="emailHelp" type="email">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
 
-      <div class="mb-3">
-        <label for="exampleInputPhone" class="form-label">Phone number</label>
-        <input type="email" class="form-control" id="exampleInputPhone" placeholder="ex: 07337555000" aria-describedby="phoneNumber">
-      </div>
+  <div class="mb-3">
+    <label for="password" class="form-label">Password</label>
+    <input formControlName="password" class="form-control" id="password" type="password">
+    <div id="passwordHelpBlock" class="form-text">
+      Your password must be 8-20 characters long, contain letters and numbers.
+    </div>
+  </div>
 
-
-<!-- 
-      <div class="mb-3">
-        <label for="exampleInputPhone" class="form-check-label">Phone number</label>
-        <input type="email" class="form-check-label" id="exampleInputPhone" placeholder="ex: 07337555000" aria-describedby="phoneNumber">
-      </div> -->
-
-
-
-
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-        <div id="passwordHelpBlock" class="form-text">
-            Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-          </div>
-      </div>
-
-      <div class="mb-3 form-check">
+  <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
